<resources>
    <string name="app_name">Mi armario</string>
    <string name="nueva_prenda">nueva prenda</string>
    <string name="preferencias">Preferencias</string>
    <string name="acerca_de">Acerca de</string>
    <string name="button">Button</string>
    <string name="nombre">Nombre</string>
    <string name="marca">Marca</string>
    <string name="talla">Talla</string>
    <string name="precio">Precio</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="abrir_mapa">Abrir Mapa</string>
    <string name="title_activity_principal">Principal</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descripcion_nigra">Tienda de streetwear cont trato muy personal, muy recomendable</string>
    <string name="nigra">Nigramercato</string>
    <string name="urban">Urban Jungle</string>
    <string name="descripcion_urban">Tienda de zapatillas con mucha variedad</string>
    <string name="size">size?</string>
    <string name="descripcion_size">Franquicia procedente del Reino Unido con buen material</string>
    <string name="footlocker">Foot Locker</string>
    <string name="descripcion_footlocker">La clasica, la de toda la vida</string>
</resources>
